--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect": "^3.7.0"
+    "connect": "^3.7.0",
+    "passenger": "^1.0.0"
   }
 }
